// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    2.35
     €
  </h2>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totalling 
    2.35
     €
  </h2>
</div>
`;

exports[`should render ExpensesSummary with no expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     
    expenses
     totalling 
    0.00
     €
  </h2>
</div>
`;
